--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "bracketSameLine": true,
   "endOfLine": "auto",
   "trailingComma": "none",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
