--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash-es": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
