--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.5",
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
